# black-flag

./: CMakeLists.txt  README.md  run.sh
cmake/: 3rdparty.cmake  assimp.cmake
render/data/: ocean.cfg  ship.mtl
render/data/cannonball/: cannonball.mtl
src/CannonballLib/: CMakeLists.txt  Cannonball.h  stdafx.h
src/Game/: CMakeLists.txt  WorldPosition.cpp  WorldPosition.h  main.cpp  stdafx.h
src/Game/data/: cannonball.mtl  ship.frag  ship.vert
src/GraphicsLib/: CMakeLists.txt  mesh.h  model.h  shader.h  stdafx.h
src/OceanLib/: Ocean.cpp
src/PirateShipLib/: CMakeLists.txt  PirateShip.h  stdafx.h
src/ShipLib/: Ship.h  stdafx.h
src/TreasureLib/: Treasure.h  stdafx.h
